# Roget-Thesaurus-Classification

./: LICENSE  README.md  pyproject.toml  requirements.txt  rogets_thesaurus.ipynb  third_assignment.ipynb
